Correctly aligned Button in logs

--- a/src/renderer/resources/styles/app.scss
+++ b/src/renderer/resources/styles/app.scss
@@ -135,14 +135,6 @@ body {
   width: 6rem !important;
 }
 
-.button-small {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 0 0 auto;
-  margin-Top: -3px;
-}
-
 .button-small button {
   padding: 0.25rem 1rem;
 }
